--- a/spring/week05/seminar/src/main/resources/application.properties
+++ b/spring/week05/seminar/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=seminar
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mem:test;MODE=MYSQL
