스프링 5주차 과제

--- a/spring/week05/seminar/src/main/resources/application.properties
+++ b/spring/week05/seminar/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.application.name=seminar
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mem:test;MODE=MYSQL
+spring.profiles.active=local
+
+# local(H2)
+spring.datasource.url=jdbc:h2:mem:seminardb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
